[package]
name = "cyberswap-farming"
version = "0.1.0"
authors = ["LunaSapiens", "$CYBER"]
edition = "2021"
description = "A Cyberswap farming contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "0.14.0" }
cw20 = { version = "0.14.0" }
cw20-base = { version = "0.14", features = ["library"] }
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "1.0.0" }
thiserror = {version = "1.0.20"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
classic_cyberswap = { path = "../../packages/classic_cyberswap", default-features = false, version = "2.7.0"}

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0"}
cosmwasm-storage = { version = "1.0.0" }
cw-multi-test =  { version = "0.16.5" } 